<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_joke_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".presentation.ui.jokeDetails.JokeDetailsFragment">

    <TextView
        android:id="@+id/jokeDetailsCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="48dp"
        android:text="@string/category_joke_details"
        android:textAlignment="center"
        android:textColor="#816E6E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/jokeDetailsQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.494" />

    <TextView
        android:id="@+id/jokeDetailsQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/question_joke_details"
        android:textAlignment="center"
        android:textColor="#816E6E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/jokeDetailsAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="50dp"
        android:text="@string/answer_joke_details"
        android:textAlignment="center"
        android:textColor="#816E6E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jokeDetailsQuestion"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/jokeDetailsPreciseCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="51dp"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center"
        android:textColor="#838383"
        app:layout_constraintBottom_toTopOf="@id/jokeDetailsPreciseQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/jokeDetailsCategory"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496"
        tools:text="CategoryEx" />

    <TextView
        android:id="@+id/jokeDetailsPreciseQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center"
        android:textColor="#797979"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toEndOf="@id/jokeDetailsQuestion"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="QuestionEx" />

    <TextView
        android:id="@+id/jokeDetailsPreciseAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center"
        android:textColor="#797979"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/jokeDetailsAnswer"
        app:layout_constraintTop_toBottomOf="@id/jokeDetailsPreciseQuestion"
        app:layout_constraintVertical_bias="0.479"
        tools:text="AnswerEx" />

    <TextView
        android:id="@+id/jokeDetailsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/joke_details"
        android:textAlignment="center"
        android:textColor="#816E6E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/jokeDetailsCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="JOKE DETAILS" />
</androidx.constraintlayout.widget.ConstraintLayout>